# elm327_obd_for_mac

./: .gitignore  CLAUDE.md  CLAUDE_WILDLIFE_REF.md  Cargo.toml  ELM327_TECHNICAL_REFERENCE.md  Makefile  PRD.md  README.md  config.yml
.github/workflows/: ci.yml
crates/elm327-bridge/: Cargo.toml
crates/elm327-bridge/src/: main.rs
crates/elm327-core/: Cargo.toml
crates/elm327-core/src/: bridge.rs  config.rs  detect.rs  elm327.rs  error.rs  ford.rs  lib.rs  obd.rs  pty.rs  serial.rs  wine.rs
crates/elm327-simulator/: Cargo.toml
crates/elm327-simulator/src/: elm327_sim.rs  lib.rs  main.rs
crates/ford-diag/: Cargo.toml
crates/ford-diag/src/: main.rs
docs/: ford_f150_diagnostics.md  ford_f150_modules.md  forscan_adapter_database.md  forscan_decompile_findings.md
tests/: integration_test.rs
