[workspace]
resolver = "2"
members = [
    "crates/elm327-core",
    "crates/elm327-bridge",
    "crates/elm327-simulator",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
nix = { version = "0.29", features = ["term", "fs", "poll", "process"] }
serialport = "4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
