[package]
name = "elm327-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { workspace = true }
serialport = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
